// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ExpandableSection component renders accordion with different titles on close and on open correctly 1`] = `
<details
  class="group border-t-1 border-b-1 mb-[-1px] border-slate-400 tool-expand"
  data-testid="expandable-section"
>
  <summary
    class="text-magenta-500 flex [&::-webkit-details-marker]:hidden cursor-pointer py-2 outline-none focus:shadow-expander-focus text-[18px] hover:underline font-semibold justify-between"
  >
    <div
      class="hidden group-open:block"
    >
      Hide Content
    </div>
    <div
      class="block group-open:hidden"
      data-testid="summary-block-title"
    >
      Expand
    </div>
    <svgr-mock
      class="group-open:rotate-[-180deg] text-magenta-500 shrink-0 w-6"
    />
  </summary>
  <div
    class="mb-4 text-gray-800 text-base leading-[28px] tracking-[0.18px] pt-2"
  >
    <p>
      Contents
    </p>
  </div>
</details>
`;

exports[`ExpandableSection component renders accordion without icon correctly 1`] = `
<details
  class="group tool-expand"
  data-testid="expandable-section"
>
  <summary
    class="text-magenta-500 flex [&::-webkit-details-marker]:hidden cursor-pointer py-2 outline-none focus:shadow-expander-focus underline"
  >
    <div
      class="block"
      data-testid="summary-block-title"
    >
      Expand
    </div>
  </summary>
  <div
    class="mb-4 text-gray-800 text-base leading-[28px] tracking-[0.18px] pt-2"
  >
    <p>
      Contents
    </p>
  </div>
</details>
`;

exports[`ExpandableSection component renders correctly 1`] = `
<details
  class="group tool-expand"
  data-testid="expandable-section"
>
  <summary
    class="text-magenta-500 flex [&::-webkit-details-marker]:hidden cursor-pointer py-2 outline-none focus:shadow-expander-focus underline hover:no-underline group"
  >
    <svgr-mock
      class="group-open:rotate-[-180deg] text-magenta-500 shrink-0 w-5 mr-2"
    />
    <div
      class="block"
      data-testid="summary-block-title"
    >
      Expand
    </div>
  </summary>
  <div
    class="mb-4 text-gray-800 text-base leading-[28px] tracking-[0.18px] pt-2"
  >
    <p>
      Contents
    </p>
  </div>
</details>
`;

exports[`ExpandableSection component renders main left icon correctly 1`] = `
<details
  class="group border-t-1 border-b-1 mb-[-1px] border-slate-400 tool-expand"
  data-testid="expandable-section"
>
  <summary
    class="text-magenta-500 flex [&::-webkit-details-marker]:hidden cursor-pointer py-2 outline-none focus:shadow-expander-focus text-[18px] hover:underline font-semibold justify-start"
  >
    <svgr-mock
      class="group-open:rotate-[-180deg] text-magenta-500 shrink-0 w-5 mr-2"
    />
    <div
      class="block"
      data-testid="summary-block-title"
    >
      Expand
    </div>
  </summary>
  <div
    class="mb-4 text-gray-800 text-base leading-[28px] tracking-[0.18px] pt-2"
  >
    <p>
      Contents
    </p>
  </div>
</details>
`;

exports[`ExpandableSection component renders open 1`] = `
<details
  class="group tool-collapse"
  data-testid="expandable-section"
  open=""
>
  <summary
    class="text-magenta-500 flex [&::-webkit-details-marker]:hidden cursor-pointer py-2 outline-none focus:shadow-expander-focus underline hover:no-underline group"
  >
    <svgr-mock
      class="group-open:rotate-[-180deg] text-magenta-500 shrink-0 w-5 mr-2"
    />
    <div
      class="block"
      data-testid="summary-block-title"
    >
      Expand
    </div>
  </summary>
  <div
    class="mb-4 text-gray-800 text-base leading-[28px] tracking-[0.18px] pt-2"
  >
    <p>
      Contents
    </p>
  </div>
</details>
`;

exports[`ExpandableSection component renders secondary correctly 1`] = `
<details
  class="group border-t-1 border-b-1 mb-[-1px] border-slate-400 tool-expand"
  data-testid="expandable-section"
>
  <summary
    class="text-magenta-500 flex [&::-webkit-details-marker]:hidden cursor-pointer py-2 outline-none focus:shadow-expander-focus text-[18px] hover:underline font-semibold justify-between"
  >
    <div
      class="block"
      data-testid="summary-block-title"
    >
      Expand
    </div>
    <svgr-mock
      class="group-open:rotate-[-180deg] text-magenta-500 shrink-0 w-6"
    />
  </summary>
  <div
    class="mb-4 text-gray-800 text-base leading-[28px] tracking-[0.18px] pt-2"
  >
    <p>
      Contents
    </p>
  </div>
</details>
`;
